[build-system]
requires = ["setuptools>=64.0", "setuptools_scm[toml]>=8"]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]

[tool.ruff.lint]
extend-select = ["I"]

[project]
name = "aioartnet"
authors = [
  { name="Chris Shucksmith", email="chris@teaengineering.co.uk" },
]
description = "Pure Python asyncio connector to Art-Net DMX Universes"
readme = "README.md"
requires-python = ">=3.9"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/TeaEngineering/aioartnet"
Issues = "https://github.com/TeaEngineering/aioartnet/issues"
